@@ -32,4 +32,7 @@ AM_CPPFLAGS = -I$(srcdir)/../../common/src \
 ../../common/src/libsdr.la: force-dependency-check
 	$(MAKE) -C $(dir $@) $(notdir $@)
 
+../../common/src/libsensor.la: force-dependency-check
+	$(MAKE) -C $(dir $@) $(notdir $@)
+
 force-dependency-check:
